--- a/pickups.html
+++ b/pickups.html
@@ -349,7 +349,8 @@ Rich - Dustin Hopkins/Roman Wilson (12/8)<br>
 States - Patrick Taylor/Jordan Mason (12/10)<br>
 Grant - Isaiah Davis/Austin Ekeler (12/11)<br>
 States - Sincere McCormick/Zamir White (12/12)<br>
-Sam - Jerome Ford/Evan McPherson (12/17)
+Sam - Jerome Ford/Evan McPherson (12/17)<br>
+Roger - Ty Johnson/Austin Seibert (12/29)
 </td></tr>
 <tr><td width=50>9/10</td>
 <td width=600>
