--- a/roster.html
+++ b/roster.html
@@ -42,6 +42,7 @@
 <tr><td>TEN</td><td>Tony Pollard           </td></tr>
 <tr><td> KC</td><td>Kareem Hunt            </td></tr>
 <tr><td> LV</td><td>Alexander Mattison     </td></tr>
+<tr><td>BUF</td><td>Ty Johnson             </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DAL</td><td>CeeDee Lamb            </td></tr>
 <tr><td>PHI</td><td>AJ Brown               </td></tr>
@@ -53,7 +54,6 @@
 <tr><td>PIT</td><td>Pat Freiermuth         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> TB</td><td>Chase McLaughlin       </td></tr>
-<tr><td>WAS</td><td>Austin Seibert         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>NYG</td><td>Malik Nabers           </td></tr>
 <tr><td>BUF</td><td>Ray Davis              </td></tr>
