--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
 <a href="week14.html"><b>14</b></a>
 <a href="week15.html"><b>15</b></a>
 <a href="week16.html"><b>16</b></a>
-<a href="week17.html"><b>17P</b></a><br>
+<a href="week17.html"><b>17</b></a>
+<a href="week18.html"><b>18P</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -77,7 +78,7 @@
 <tr><td><font size=2>John(9)</font></td>
     <td><font size=2>9</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>11060</font></td>
+    <td><font size=2>11625</font></td>
     <td><font size=2>10070</font></td>
     <td><font size=2>995</font></td>
     <td><font size=2>375</font></td>
@@ -85,23 +86,23 @@
 <tr><td><font size=2>Randy(5)</font></td>
     <td><font size=2>9</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>10040</font></td>
+    <td><font size=2>11165</font></td>
     <td><font size=2>9365</font></td>
-    <td><font size=2>960</font></td>
+    <td><font size=2>1125</font></td>
     <td><font size=2>295</font></td>
-    <td><font size=2>2</font></td>
+    <td><font size=2>3</font></td>
 <tr><td><font size=2>Mike(3)</font></td>
     <td><font size=2>8</font></td>
     <td><font size=2>8</font></td>
-    <td><font size=2>9235</font></td>
+    <td><font size=2>9455</font></td>
     <td><font size=2>9035</font></td>
     <td><font size=2>790</font></td>
-    <td><font size=2>310</font></td>
+    <td><font size=2>220</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>States(1)</font></td>
     <td><font size=2>6</font></td>
     <td><font size=2>10</font></td>
-    <td><font size=2>7755</font></td>
+    <td><font size=2>8150</font></td>
     <td><font size=2>8975</font></td>
     <td><font size=2>700</font></td>
     <td><font size=2>215</font></td>
@@ -109,7 +110,7 @@
 <tr><td><font size=2>Sam(7)</font></td>
     <td><font size=2>5</font></td>
     <td><font size=2>11</font></td>
-    <td><font size=2>10660</font></td>
+    <td><font size=2>11325</font></td>
     <td><font size=2>11895</font></td>
     <td><font size=2>1135</font></td>
     <td><font size=2>350</font></td>
@@ -125,7 +126,7 @@
 <tr><td><font size=2>Roger(2)</font></td>
     <td><font size=2>12</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>11545</font></td>
+    <td><font size=2>12245</font></td>
     <td><font size=2>9505</font></td>
     <td><font size=2>1185</font></td>
     <td><font size=2>375</font></td>
@@ -133,7 +134,7 @@
 <tr><td><font size=2>Grant(10)</font></td>
     <td><font size=2>12</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>12815</font></td>
+    <td><font size=2>13885</font></td>
     <td><font size=2>10395</font></td>
     <td><font size=2>1405</font></td>
     <td><font size=2>410</font></td>
@@ -141,7 +142,7 @@
 <tr><td><font size=2>Steven(8)</font></td>
     <td><font size=2>7</font></td>
     <td><font size=2>9</font></td>
-    <td><font size=2>10070</font></td>
+    <td><font size=2>10500</font></td>
     <td><font size=2>9940</font></td>
     <td><font size=2>975</font></td>
     <td><font size=2>340</font></td>
@@ -149,7 +150,7 @@
 <tr><td><font size=2>Rich(6)</font></td>
     <td><font size=2>7</font></td>
     <td><font size=2>9</font></td>
-    <td><font size=2>8730</font></td>
+    <td><font size=2>9130</font></td>
     <td><font size=2>10390</font></td>
     <td><font size=2>790</font></td>
     <td><font size=2>250</font></td>
@@ -157,7 +158,7 @@
 <tr><td><font size=2>Matthew(4)</font></td>
     <td><font size=2>5</font></td>
     <td><font size=2>11</font></td>
-    <td><font size=2>8880</font></td>
+    <td><font size=2>9925</font></td>
     <td><font size=2>11220</font></td>
     <td><font size=2>1105</font></td>
     <td><font size=2>245</font></td>
