--- a/thousand.html
+++ b/thousand.html
@@ -513,6 +513,12 @@
     <td>1125</td>
     <td>Roger</td>
     <td>845</td></tr>
+<tr><td>2024</td>
+    <td>Week 17</td>
+    <td>Randy Edwards</td>
+    <td>1125</td>
+    <td>Roger</td>
+    <td>700</td></tr>
 <tr><td>2017</td>
     <td>Week 3</td>
     <td>Steven Cohen</td>
@@ -711,6 +717,12 @@
     <td>1070</td>
     <td>Rich</td>
     <td>720</td></tr>
+<tr><td>2024</td>
+    <td>Week 17</td>
+    <td>Grant Mydland</td>
+    <td>1070</td>
+    <td>John</td>
+    <td>565</td></tr>
 <tr><td>1994</td>
     <td>Week 10</td>
     <td>Grant Mydland</td>
@@ -873,6 +885,12 @@
     <td>1045</td>
     <td>Mike</td>
     <td>430</td></tr>
+<tr><td>2024</td>
+    <td>Week 17</td>
+    <td>Matthew Edwards</td>
+    <td>1045</td>
+    <td>-</td>
+    <td>-</td></tr>
 <tr><td>2002</td>
     <td>Week 4</td>
     <td>John Heinzelmann</td>
