--- a/week17.html
+++ b/week17.html
@@ -7,58 +7,58 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>John (9)</b></font></td></tr>
-<tr><td>Murray</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Irving</td>        <td></td><td align=right>0</td></tr>
-<tr><td>NCollins</td>      <td></td><td align=right>0</td></tr>
+<tr><td>Murray</td>        <td></td><td align=right>80</td></tr>
+<tr><td>Henry</td>         <td></td><td align=right>120</td></tr>
+<tr><td>Irving</td>        <td></td><td align=right>90</td></tr>
+<tr><td>NCollins</td>      <td></td><td align=right>25</td></tr>
 <tr><td>McLaurin</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Strange</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Boswell</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Daniels</td>       <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Boswell</td>       <td></td><td align=right>35</td></tr>
+<tr><td>Daniels</td>       <td></td><td align=right>215</td></tr>
+<tr><td></td>              <td></td><td align=right>565</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Grant (10)</b></font></td></tr>
-<tr><td>LJackson</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Barkley</td>       <td></td><td align=right>0</td></tr>
-<tr><td>JTaylor</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Evans</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Worthy</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Andrews</td>       <td></td><td align=right>0</td></tr>
+<tr><td>LJackson</td>      <td></td><td align=right>315</td></tr>
+<tr><td>Barkley</td>       <td></td><td align=right>80</td></tr>
+<tr><td>JTaylor</td>       <td></td><td align=right>260</td></tr>
+<tr><td>Evans</td>         <td></td><td align=right>145</td></tr>
+<tr><td>Worthy</td>        <td></td><td align=right>110</td></tr>
+<tr><td>Andrews</td>       <td></td><td align=right>80</td></tr>
 <tr><td>Fairbairn</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Penix</td>         <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Penix</td>         <td></td><td align=right>80</td></tr>
+<tr><td></td>              <td></td><td align=right>1070</td></tr>
 </table>
 </td>
 <td></td><td></td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Roger (2)</b></font></td></tr>
-<tr><td>JAllen</td>        <td></td><td align=right>0</td></tr>
-<tr><td>JCook</td>         <td></td><td align=right>0</td></tr>
+<tr><td>JAllen</td>        <td></td><td align=right>175</td></tr>
+<tr><td>JCook</td>         <td></td><td align=right>75</td></tr>
 <tr><td>Mattison</td>      <td></td><td align=right>0</td></tr>
-<tr><td>ABrown</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Higgins</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Freiermuth</td>    <td></td><td align=right>0</td></tr>
-<tr><td>McLaughlin</td>    <td></td><td align=right>0</td></tr>
+<tr><td>ABrown</td>        <td></td><td align=right>100</td></tr>
+<tr><td>Higgins</td>       <td></td><td align=right>240</td></tr>
+<tr><td>Freiermuth</td>    <td></td><td align=right>30</td></tr>
+<tr><td>McLaughlin</td>    <td></td><td align=right>80</td></tr>
 <tr><td>RDavis</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>700</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Randy (5)</b></font></td></tr>
-<tr><td>Burrow</td>        <td></td><td align=right>0</td></tr>
-<tr><td>BRobinson</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Burrow</td>        <td></td><td align=right>225</td></tr>
+<tr><td>BRobinson</td>     <td></td><td align=right>145</td></tr>
 <tr><td>Achane</td>        <td></td><td align=right>0</td></tr>
-<tr><td>JWilliams</td>     <td></td><td align=right>0</td></tr>
-<tr><td>DSamuel</td>       <td></td><td align=right>0</td></tr>
-<tr><td>LaPorta</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Dicker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>McConkey</td>      <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>JWilliams</td>     <td></td><td align=right>210</td></tr>
+<tr><td>DSamuel</td>       <td></td><td align=right>50</td></tr>
+<tr><td>LaPorta</td>       <td></td><td align=right>105</td></tr>
+<tr><td>Dicker</td>        <td></td><td align=right>145</td></tr>
+<tr><td>McConkey</td>      <td></td><td align=right>245</td></tr>
+<tr><td></td>              <td></td><td align=right>1125</td></tr>
 </table>
 </td>
 </tr>
@@ -66,58 +66,58 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>States (1)</b></font></td></tr>
-<tr><td>Richardson</td>    <td></td><td align=right>0</td></tr>
-<tr><td>Guerendo</td>      <td></td><td align=right>0</td></tr>
+<tr><td>Flacco</td>        <td></td><td align=right>155</td></tr>
+<tr><td>Guerendo</td>      <td></td><td align=right>30</td></tr>
 <tr><td>AJones</td>        <td></td><td align=right>0</td></tr>
-<tr><td>London</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Ridley</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Bowers</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Karty</td>         <td></td><td align=right>0</td></tr>
+<tr><td>London</td>        <td></td><td align=right>50</td></tr>
+<tr><td>Ridley</td>        <td></td><td align=right>40</td></tr>
+<tr><td>Bowers</td>        <td></td><td align=right>35</td></tr>
+<tr><td>Karty</td>         <td></td><td align=right>85</td></tr>
 <tr><td>Vidal</td>         <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>395</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Mike (3)</b></font></td></tr>
 <tr><td>Stroud</td>        <td></td><td align=right>0</td></tr>
-<tr><td>CBrown</td>        <td></td><td align=right>0</td></tr>
-<tr><td>KWilliams</td>     <td></td><td align=right>0</td></tr>
+<tr><td>CBrown</td>        <td></td><td align=right>30</td></tr>
+<tr><td>KWilliams</td>     <td></td><td align=right>75</td></tr>
 <tr><td>Smith-Njigba</td>  <td></td><td align=right>0</td></tr>
 <tr><td>Reed</td>          <td></td><td align=right>0</td></tr>
-<tr><td>McBride</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Aubrey</td>        <td></td><td align=right>0</td></tr>
+<tr><td>McBride</td>       <td></td><td align=right>110</td></tr>
+<tr><td>Aubrey</td>        <td></td><td align=right>5</td></tr>
 <tr><td>CWilliams</td>     <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>220</td></tr>
 </table>
 </td>
 <td></td><td></td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Matthew (4)</b></font></td></tr>
-<tr><td>Purdy</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Gibbs</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Purdy</td>         <td></td><td align=right>265</td></tr>
+<tr><td>Gibbs</td>         <td></td><td align=right>205</td></tr>
 <tr><td>Estime</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Sutton</td>        <td></td><td align=right>0</td></tr>
-<tr><td>BThomas</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Kraft</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Myers</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Nix</td>           <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Sutton</td>        <td></td><td align=right>100</td></tr>
+<tr><td>BThomas</td>       <td></td><td align=right>120</td></tr>
+<tr><td>Kraft</td>         <td></td><td align=right>25</td></tr>
+<tr><td>Myers</td>         <td></td><td align=right>80</td></tr>
+<tr><td>Nix</td>           <td></td><td align=right>250</td></tr>
+<tr><td></td>              <td></td><td align=right>1045</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Rich (6)</b></font></td></tr>
-<tr><td>Mahomes</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Mahomes</td>       <td></td><td align=right>205</td></tr>
 <tr><td>Mixon</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Hubbard</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Nacua</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Nacua</td>         <td></td><td align=right>60</td></tr>
 <tr><td>Shakir</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Kittle</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Tucker</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Kittle</td>        <td></td><td align=right>55</td></tr>
+<tr><td>Tucker</td>        <td></td><td align=right>80</td></tr>
 <tr><td>Odunze</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>400</td></tr>
 </table>
 </td>
 </tr>
@@ -125,15 +125,15 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Sam (7)</b></font></td></tr>
-<tr><td>Goff</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Goff</td>          <td></td><td align=right>230</td></tr>
 <tr><td>Hall</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Jacobs</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Chase</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Jacobs</td>        <td></td><td align=right>80</td></tr>
+<tr><td>Chase</td>         <td></td><td align=right>50</td></tr>
 <tr><td>Adams</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Kelce</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Bates</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Maye</td>          <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Kelce</td>         <td></td><td align=right>115</td></tr>
+<tr><td>Bates</td>         <td></td><td align=right>115</td></tr>
+<tr><td>Maye</td>          <td></td><td align=right>75</td></tr>
+<tr><td></td>              <td></td><td align=right>665</td></tr>
 </table>
 </td>
 <td>
@@ -142,12 +142,12 @@
 <tr><td>Hurts</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Walker</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Conner</td>        <td></td><td align=right>0</td></tr>
-<tr><td>St Brown</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Jefferson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>JSmith</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Bass</td>          <td></td><td align=right>0</td></tr>
-<tr><td>McMillan</td>      <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>St Brown</td>      <td></td><td align=right>80</td></tr>
+<tr><td>Jefferson</td>     <td></td><td align=right>45</td></tr>
+<tr><td>JSmith</td>        <td></td><td align=right>75</td></tr>
+<tr><td>Bass</td>          <td></td><td align=right>55</td></tr>
+<tr><td>McMillan</td>      <td></td><td align=right>175</td></tr>
+<tr><td></td>              <td></td><td align=right>430</td></tr>
 </table>
 <td></td><td></td>
 </td>
@@ -169,7 +169,7 @@
 <tr><td><font size=2>John(9)</font></td>
     <td><font size=2>9</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>11060</font></td>
+    <td><font size=2>11625</font></td>
     <td><font size=2>10070</font></td>
     <td><font size=2>995</font></td>
     <td><font size=2>375</font></td>
@@ -177,23 +177,23 @@
 <tr><td><font size=2>Randy(5)</font></td>
     <td><font size=2>9</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>10040</font></td>
+    <td><font size=2>11165</font></td>
     <td><font size=2>9365</font></td>
-    <td><font size=2>960</font></td>
+    <td><font size=2>1125</font></td>
     <td><font size=2>295</font></td>
-    <td><font size=2>2</font></td>
+    <td><font size=2>3</font></td>
 <tr><td><font size=2>Mike(3)</font></td>
     <td><font size=2>8</font></td>
     <td><font size=2>8</font></td>
-    <td><font size=2>9235</font></td>
+    <td><font size=2>9455</font></td>
     <td><font size=2>9035</font></td>
     <td><font size=2>790</font></td>
-    <td><font size=2>310</font></td>
+    <td><font size=2>220</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>States(1)</font></td>
     <td><font size=2>6</font></td>
     <td><font size=2>10</font></td>
-    <td><font size=2>7755</font></td>
+    <td><font size=2>8150</font></td>
     <td><font size=2>8975</font></td>
     <td><font size=2>700</font></td>
     <td><font size=2>215</font></td>
@@ -201,7 +201,7 @@
 <tr><td><font size=2>Sam(7)</font></td>
     <td><font size=2>5</font></td>
     <td><font size=2>11</font></td>
-    <td><font size=2>10660</font></td>
+    <td><font size=2>11325</font></td>
     <td><font size=2>11895</font></td>
     <td><font size=2>1135</font></td>
     <td><font size=2>350</font></td>
@@ -217,7 +217,7 @@
 <tr><td><font size=2>Roger(2)</font></td>
     <td><font size=2>12</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>11545</font></td>
+    <td><font size=2>12245</font></td>
     <td><font size=2>9505</font></td>
     <td><font size=2>1185</font></td>
     <td><font size=2>375</font></td>
@@ -225,7 +225,7 @@
 <tr><td><font size=2>Grant(10)</font></td>
     <td><font size=2>12</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>12815</font></td>
+    <td><font size=2>13885</font></td>
     <td><font size=2>10395</font></td>
     <td><font size=2>1405</font></td>
     <td><font size=2>410</font></td>
@@ -233,7 +233,7 @@
 <tr><td><font size=2>Steven(8)</font></td>
     <td><font size=2>7</font></td>
     <td><font size=2>9</font></td>
-    <td><font size=2>10070</font></td>
+    <td><font size=2>10500</font></td>
     <td><font size=2>9940</font></td>
     <td><font size=2>975</font></td>
     <td><font size=2>340</font></td>
@@ -241,7 +241,7 @@
 <tr><td><font size=2>Rich(6)</font></td>
     <td><font size=2>7</font></td>
     <td><font size=2>9</font></td>
-    <td><font size=2>8730</font></td>
+    <td><font size=2>9130</font></td>
     <td><font size=2>10390</font></td>
     <td><font size=2>790</font></td>
     <td><font size=2>250</font></td>
@@ -249,7 +249,7 @@
 <tr><td><font size=2>Matthew(4)</font></td>
     <td><font size=2>5</font></td>
     <td><font size=2>11</font></td>
-    <td><font size=2>8880</font></td>
+    <td><font size=2>9925</font></td>
     <td><font size=2>11220</font></td>
     <td><font size=2>1105</font></td>
     <td><font size=2>245</font></td>
