--- a/roster.html
+++ b/roster.html
@@ -188,6 +188,7 @@
 <tr><td>CLE</td><td>Nick Chubb             </td></tr>
 <tr><td> GB</td><td>Emanuel Wilson         </td></tr>
 <tr><td>CLE</td><td>Jerome Ford            </td></tr>
+<tr><td>PIT</td><td>Jaylen Warren          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CIN</td><td>Ja'Marr Chase          </td></tr>
 <tr><td>NYJ</td><td>Davante Adams          </td></tr>
@@ -201,7 +202,6 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td> NE</td><td>Drake Maye             </td></tr>
 <tr><td>MIN</td><td>Will Reichard          </td></tr>
-<tr><td>NYJ</td><td>Braelon Allen          </td></tr>
 </table>
 </td>
 <td valign=top>
