--- a/pickups.html
+++ b/pickups.html
@@ -222,8 +222,8 @@
 <tr>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Jaylen Warren/Braelon Allen</td>
+<td width=50>12/30</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>3)</td>
