--- a/roster.html
+++ b/roster.html
@@ -94,7 +94,7 @@
 <table border=0 cellspacing=0 width=204>
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Matthew (4)</b></font></td></tr>
 <tr><td> SF</td><td>Brock Purdy            </td></tr>
-<tr><td> SF</td><td>Brandon Allen          </td></tr>
+<tr><td>PIT</td><td>Russell Wilson         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DET</td><td>Jahmyr Gibbs           </td></tr>
 <tr><td>DET</td><td>David Montgomery       </td></tr>
