--- a/week18.html
+++ b/week18.html
@@ -21,12 +21,12 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Grant (10)</b></font></td></tr>
-<tr><td>LJackson</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Barkley</td>       <td></td><td align=right>0</td></tr>
+<tr><td>LJackson (D)</td>  <td></td><td align=right>0</td></tr>
+<tr><td>Barkley (D)</td>   <td></td><td align=right>0</td></tr>
 <tr><td>JTaylor</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Evans</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Worthy</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Andrews</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Worthy (D)</td>    <td></td><td align=right>0</td></tr>
+<tr><td>Andrews (D)</td>   <td></td><td align=right>0</td></tr>
 <tr><td>Fairbairn</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Penix</td>         <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
@@ -109,14 +109,14 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Sam (7)</b></font></td></tr>
-<tr><td>Goff</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Hall</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Jacobs</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Chase</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Adams</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Kelce</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Bates</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Maye</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Goff (D)</td>      <td></td><td align=right>0</td></tr>
+<tr><td>Jacobs (D)</td>    <td></td><td align=right>0</td></tr>
+<tr><td>Warren (D)</td>    <td></td><td align=right>0</td></tr>
+<tr><td>Chase (D)</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Pickens (D)</td>   <td></td><td align=right>0</td></tr>
+<tr><td>Kelce (D)</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Bates (D)</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Reichard (D)</td>  <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
