--- a/week18.html
+++ b/week18.html
@@ -27,7 +27,7 @@
 <tr><td>Evans</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Worthy (D)</td>    <td></td><td align=right>0</td></tr>
 <tr><td>Andrews (D)</td>   <td></td><td align=right>0</td></tr>
-<tr><td>Fairbairn</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Fairbairn (D)</td> <td></td><td align=right>0</td></tr>
 <tr><td>Penix</td>         <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
@@ -66,14 +66,14 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Mike (3)</b></font></td></tr>
-<tr><td>Stroud</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Stafford (D)</td>  <td></td><td align=right>0</td></tr>
 <tr><td>CBrown</td>        <td></td><td align=right>0</td></tr>
 <tr><td>KWilliams</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Smith-Njigba</td>  <td></td><td align=right>0</td></tr>
 <tr><td>Reed</td>          <td></td><td align=right>0</td></tr>
 <tr><td>McBride</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Aubrey</td>        <td></td><td align=right>0</td></tr>
-<tr><td>CWilliams</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Coleman</td>       <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
