--- a/week18.html
+++ b/week18.html
@@ -25,7 +25,7 @@
 <tr><td>Barkley (D)</td>   <td></td><td align=right>0</td></tr>
 <tr><td>JTaylor</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Evans</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Worthy (D)</td>    <td></td><td align=right>0</td></tr>
+<tr><td>Addison</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Andrews (D)</td>   <td></td><td align=right>0</td></tr>
 <tr><td>Fairbairn (D)</td> <td></td><td align=right>0</td></tr>
 <tr><td>Penix</td>         <td></td><td align=right>0</td></tr>
@@ -125,9 +125,9 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Steven (8)</b></font></td></tr>
-<tr><td>Hurts</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Walker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Conner</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Love</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Charbonnet</td>    <td></td><td align=right>0</td></tr>
+<tr><td>Singletary</td>    <td></td><td align=right>0</td></tr>
 <tr><td>St Brown</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Jefferson</td>     <td></td><td align=right>0</td></tr>
 <tr><td>JSmith</td>        <td></td><td align=right>0</td></tr>
