--- a/roster.html
+++ b/roster.html
@@ -193,7 +193,7 @@
 <tr><td>CIN</td><td>Ja'Marr Chase          </td></tr>
 <tr><td>NYJ</td><td>Davante Adams          </td></tr>
 <tr><td>PIT</td><td>George Pickens         </td></tr>
-<tr><td> SF</td><td>Jauan Jennings         </td></tr>
+<tr><td> KC</td><td>Nikko Remigio          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> KC</td><td>Travis Kelce           </td></tr>
 <tr><td>MIN</td><td>TJ Hockenson           </td></tr>
