--- a/week18.html
+++ b/week18.html
@@ -112,7 +112,7 @@
 <tr><td>Goff (D)</td>      <td></td><td align=right>***</td></tr>
 <tr><td>Jacobs (D)</td>    <td></td><td align=right>***</td></tr>
 <tr><td>Warren (D)</td>    <td></td><td align=right>***</td></tr>
-<tr><td>Chase (D)</td>     <td></td><td align=right>***</td></tr>
+<tr><td>Remigio (D)</td>   <td></td><td align=right>***</td></tr>
 <tr><td>Pickens (D)</td>   <td></td><td align=right>***</td></tr>
 <tr><td>Kelce (D)</td>     <td></td><td align=right>***</td></tr>
 <tr><td>Bates (D)</td>     <td></td><td align=right>***</td></tr>
