--- a/week18.html
+++ b/week18.html
@@ -14,20 +14,20 @@
 <tr><td>DSmith (D)</td>    <td></td><td align=right>***</td></tr>
 <tr><td>LaPorta</td>       <td></td><td align=right>30</td></tr>
 <tr><td>Dicker</td>        <td></td><td align=right>135</td></tr>
-<tr><td>McConkey (D)</td>  <td></td><td align=right>***</td></tr>
+<tr><td>McConkey (D)</td>  <td></td><td align=right>220</td></tr>
 <tr><td></td>              <td></td><td align=right>***</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Grant (10)</b></font></td></tr>
-<tr><td>LJackson (D)</td>  <td></td><td align=right>***</td></tr>
+<tr><td>LJackson (D)</td>  <td></td><td align=right>115</td></tr>
 <tr><td>Barkley (D)</td>   <td></td><td align=right>***</td></tr>
 <tr><td>JTaylor</td>       <td></td><td align=right>185</td></tr>
 <tr><td>Evans</td>         <td></td><td align=right>40</td></tr>
 <tr><td>Addison</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Andrews (D)</td>   <td></td><td align=right>***</td></tr>
-<tr><td>Fairbairn (D)</td> <td></td><td align=right>***</td></tr>
+<tr><td>Andrews (D)</td>   <td></td><td align=right>0</td></tr>
+<tr><td>Fairbairn (D)</td> <td></td><td align=right>120</td></tr>
 <tr><td>Penix</td>         <td></td><td align=right>250</td></tr>
 <tr><td></td>              <td></td><td align=right>***</td></tr>
 </table>
@@ -111,9 +111,9 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Sam (7)</b></font></td></tr>
 <tr><td>Goff (D)</td>      <td></td><td align=right>***</td></tr>
 <tr><td>Jacobs (D)</td>    <td></td><td align=right>***</td></tr>
-<tr><td>Warren (D)</td>    <td></td><td align=right>***</td></tr>
+<tr><td>Warren (D)</td>    <td></td><td align=right>0</td></tr>
 <tr><td>Remigio (D)</td>   <td></td><td align=right>***</td></tr>
-<tr><td>Pickens (D)</td>   <td></td><td align=right>***</td></tr>
+<tr><td>Pickens (D)</td>   <td></td><td align=right>140</td></tr>
 <tr><td>Kelce (D)</td>     <td></td><td align=right>***</td></tr>
 <tr><td>Bates (D)</td>     <td></td><td align=right>***</td></tr>
 <tr><td>Reichard (D)</td>  <td></td><td align=right>***</td></tr>
@@ -142,12 +142,12 @@
 <tr><td>Murray</td>        <td></td><td align=right>210</td></tr>
 <tr><td>Henry</td>         <td></td><td align=right>315</td></tr>
 <tr><td>Irving</td>        <td></td><td align=right>140</td></tr>
-<tr><td>NCollins (D)</td>  <td></td><td align=right>***</td></tr>
+<tr><td>NCollins (D)</td>  <td></td><td align=right>135</td></tr>
 <tr><td>McLaurin</td>      <td></td><td align=right>80</td></tr>
 <tr><td>Strange</td>       <td></td><td align=right>30</td></tr>
 <tr><td>Boswell</td>       <td></td><td align=right>70</td></tr>
 <tr><td>Daniels</td>       <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>***</td></tr>
+<tr><td></td>              <td></td><td align=right>980</td></tr>
 </table>
 <td></td><td></td>
 </td>
@@ -169,7 +169,7 @@
 <tr><td><font size=2>John(9)</font></td>
     <td><font size=2>9</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>11625</font></td>
+    <td><font size=2>12605</font></td>
     <td><font size=2>10070</font></td>
     <td><font size=2>995</font></td>
     <td><font size=2>375</font></td>
