--- a/thousand.html
+++ b/thousand.html
@@ -1149,6 +1149,12 @@
     <td>1015</td>
     <td>Randy</td>
     <td>600</td></tr>
+<tr><td>2024</td>
+    <td>Week 18</td>
+    <td>Matthew Edwards</td>
+    <td>1015</td>
+    <td>-</td>
+    <td>-</td></tr>
 <tr><td>1998</td>
     <td>Week 11</td>
     <td>Matthew Edwards</td>
