--- a/freeagt.html
+++ b/freeagt.html
@@ -45,6 +45,7 @@
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Wide Receivers</td></tr>
 <tr><td><font size=3>Rashod Bateman         </td><td><font size=3>1070</td></tr>
 <tr><td><font size=3>Alec Pierce            </td><td><font size=3> 835</td></tr>
+<tr><td><font size=3>Jauan Jennings         </td><td><font size=3> 795</td></tr>
 <tr><td><font size=3>Calvin Austin          </td><td><font size=3> 790</td></tr>
 <tr><td><font size=3>Marvin Mims            </td><td><font size=3> 755</td></tr>
 <tr><td><font size=3>KaVontae Turpin        </td><td><font size=3> 740</td></tr>
@@ -57,7 +58,6 @@
 <tr><td><font size=3>Jalen Tolbert          </td><td><font size=3> 575</td></tr>
 <tr><td><font size=3>Marquez ValdesScantling</td><td><font size=3> 545</td></tr>
 <tr><td><font size=3>Romeo Doubs            </td><td><font size=3> 540</td></tr>
-<tr><td><font size=3>Parker Washington      </td><td><font size=3> 530</td></tr>
 </table>
 </td></tr><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
