--- a/leader.html
+++ b/leader.html
@@ -5,9 +5,9 @@
 <table cellspacing=1><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=3><font size=5 color='yellow'><center>Quarterbacks</td></tr>
-<tr><td><font size=3>1)</td><td><font size=3>Lamar Jackson          </td><td><font size=3>3460</td></tr>
-<tr><td><font size=3>2)</td><td><font size=3>Joe Burrow             </td><td><font size=3>3200</td></tr>
-<tr><td><font size=3>3)</td><td><font size=3>Josh Allen             </td><td><font size=3>3085</td></tr>
+<tr><td><font size=3>1)</td><td><font size=3>Lamar Jackson          </td><td><font size=3>3575</td></tr>
+<tr><td><font size=3>2)</td><td><font size=3>Josh Allen             </td><td><font size=3>3305</td></tr>
+<tr><td><font size=3>3)</td><td><font size=3>Joe Burrow             </td><td><font size=3>3200</td></tr>
 <tr><td><font size=3>4)</td><td><font size=3>Baker Mayfield         </td><td><font size=3>2920</td></tr>
 <tr><td><font size=3>5)</td><td><font size=3>Jared Goff             </td><td><font size=3>2745</td></tr>
 <tr><td><font size=3>6)</td><td><font size=3>Sam Darnold            </td><td><font size=3>2390</td></tr>
@@ -21,8 +21,8 @@
 <tr><td><font size=3>14)</td><td><font size=3>Jordan Love            </td><td><font size=3>1770</td></tr>
 <tr><td><font size=3>15)</td><td><font size=3>Kirk Cousins           </td><td><font size=3>1590</td></tr>
 <tr><td><font size=3>16)</td><td><font size=3>Bryce Young            </td><td><font size=3>1580</td></tr>
-<tr><td><font size=3>17)</td><td><font size=3>CJ Stroud              </td><td><font size=3>1425</td></tr>
-<tr><td><font size=3>18)</td><td><font size=3>Matthew Stafford       </td><td><font size=3>1420</td></tr>
+<tr><td><font size=3>17)</td><td><font size=3>Matthew Stafford       </td><td><font size=3>1520</td></tr>
+<tr><td><font size=3>18)</td><td><font size=3>CJ Stroud              </td><td><font size=3>1425</td></tr>
 <tr><td><font size=3>19)</td><td><font size=3>Tua Tagovailoa         </td><td><font size=3>1340</td></tr>
 <tr><td><font size=3>20)</td><td><font size=3>Derek Carr             </td><td><font size=3>1275</td></tr>
 <tr><td><font size=3>21)</td><td><font size=3>Russell Wilson         </td><td><font size=3>1270</td></tr>
@@ -44,13 +44,13 @@
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Running Backs</td></tr>
-<tr><td><font size=3>Saquon Barkley         </td><td><font size=3>2815</td></tr>
+<tr><td><font size=3>Saquon Barkley         </td><td><font size=3>2870</td></tr>
 <tr><td><font size=3>Jahmyr Gibbs           </td><td><font size=3>2425</td></tr>
 <tr><td><font size=3>Derrick Henry          </td><td><font size=3>2375</td></tr>
-<tr><td><font size=3>James Cook             </td><td><font size=3>2105</td></tr>
+<tr><td><font size=3>James Cook             </td><td><font size=3>2215</td></tr>
 <tr><td><font size=3>Jonathan Taylor        </td><td><font size=3>1795</td></tr>
+<tr><td><font size=3>Josh Jacobs            </td><td><font size=3>1710</td></tr>
 <tr><td><font size=3>Bijan Robinson         </td><td><font size=3>1665</td></tr>
-<tr><td><font size=3>Josh Jacobs            </td><td><font size=3>1620</td></tr>
 <tr><td><font size=3>Kyren Williams         </td><td><font size=3>1525</td></tr>
 <tr><td><font size=3>De'Von Achane          </td><td><font size=3>1460</td></tr>
 <tr><td><font size=3>Joe Mixon              </td><td><font size=3>1430</td></tr>
@@ -83,7 +83,7 @@
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Wide Receivers</td></tr>
-<tr><td><font size=3>Ja'Marr Chase          </td><td><font size=3>2210</td></tr>
+<tr><td><font size=3>Ja'Marr Chase          </td><td><font size=3>2330</td></tr>
 <tr><td><font size=3>Justin Jefferson       </td><td><font size=3>1580</td></tr>
 <tr><td><font size=3>Terry McLaurin         </td><td><font size=3>1470</td></tr>
 <tr><td><font size=3>Amon-Ra St Brown       </td><td><font size=3>1470</td></tr>
@@ -92,16 +92,16 @@
 <tr><td><font size=3>Mike Evans             </td><td><font size=3>1210</td></tr>
 <tr><td><font size=3>Jordan Addison         </td><td><font size=3>1150</td></tr>
 <tr><td><font size=3>Tee Higgins            </td><td><font size=3>1125</td></tr>
+<tr><td><font size=3>DeVonta Smith          </td><td><font size=3>1105</td></tr>
 <tr><td><font size=3>Courtland Sutton       </td><td><font size=3>1105</td></tr>
 <tr><td><font size=3>CeeDee Lamb            </td><td><font size=3>1095</td></tr>
-<tr><td><font size=3>DeVonta Smith          </td><td><font size=3>1080</td></tr>
 <tr><td><font size=3>AJ Brown               </td><td><font size=3>1075</td></tr>
 <tr><td><font size=3>Rashod Bateman         </td><td><font size=3>1070</td></tr>
+<tr><td><font size=3>Nico Collins           </td><td><font size=3>1060</td></tr>
 <tr><td><font size=3>Davante Adams          </td><td><font size=3>1010</td></tr>
 <tr><td><font size=3>Garrett Wilson         </td><td><font size=3> 975</td></tr>
 <tr><td><font size=3>Jerry Jeudy            </td><td><font size=3> 955</td></tr>
 <tr><td><font size=3>Calvin Ridley          </td><td><font size=3> 935</td></tr>
-<tr><td><font size=3>Nico Collins           </td><td><font size=3> 925</td></tr>
 <tr><td><font size=3>DK Metcalf             </td><td><font size=3> 920</td></tr>
 <tr><td><font size=3>Jayden Reed            </td><td><font size=3> 905</td></tr>
 <tr><td><font size=3>Jaxon Smith-Njigba     </td><td><font size=3> 900</td></tr>
@@ -117,7 +117,7 @@
 <tr><td><font size=3>Zay Flowers            </td><td><font size=3> 770</td></tr>
 <tr><td><font size=3>Tyreek Hill            </td><td><font size=3> 770</td></tr>
 <tr><td><font size=3>Marvin Mims            </td><td><font size=3> 755</td></tr>
-<tr><td><font size=3>KaVontae Turpin        </td><td><font size=3> 740</td></tr>
+<tr><td><font size=3>George Pickens         </td><td><font size=3> 745</td></tr>
 </table>
 </td></tr><tr><td><br><br><br><br></td></tr><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
@@ -163,9 +163,9 @@
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Kickers</td></tr>
 <tr><td><font size=3>Brandon Aubrey         </td><td><font size=3>1960</td></tr>
 <tr><td><font size=3>Chris Boswell          </td><td><font size=3>1810</td></tr>
+<tr><td><font size=3>Ka'imi Fairbairn       </td><td><font size=3>1710</td></tr>
 <tr><td><font size=3>Cameron Dicker         </td><td><font size=3>1670</td></tr>
 <tr><td><font size=3>Jason Sanders          </td><td><font size=3>1605</td></tr>
-<tr><td><font size=3>Ka'imi Fairbairn       </td><td><font size=3>1590</td></tr>
 <tr><td><font size=3>Wil Lutz               </td><td><font size=3>1455</td></tr>
 <tr><td><font size=3>Chase McLaughlin       </td><td><font size=3>1360</td></tr>
 <tr><td><font size=3>Daniel Carlson         </td><td><font size=3>1335</td></tr>
@@ -205,12 +205,12 @@
 <tr><td><font size=3>Caleb Williams         </td><td><font size=3>1475</td></tr>
 <tr><td><font size=3>Brian Thomas           </td><td><font size=3>1350</td></tr>
 <tr><td><font size=3>Drake Maye             </td><td><font size=3>1325</td></tr>
+<tr><td><font size=3>Ladd McConkey          </td><td><font size=3>1250</td></tr>
 <tr><td><font size=3>Joshua Karty           </td><td><font size=3>1170</td></tr>
 <tr><td><font size=3>Malik Nabers           </td><td><font size=3>1160</td></tr>
 <tr><td><font size=3>Cam Little             </td><td><font size=3>1135</td></tr>
 <tr><td><font size=3>Bucky Irving           </td><td><font size=3>1125</td></tr>
-<tr><td><font size=3>Will Reichard          </td><td><font size=3>1065</td></tr>
-<tr><td><font size=3>Ladd McConkey          </td><td><font size=3>1030</td></tr>
+<tr><td><font size=3>Will Reichard          </td><td><font size=3>1095</td></tr>
 <tr><td><font size=3>Xavier Worthy          </td><td><font size=3>1030</td></tr>
 <tr><td><font size=3>Brock Bowers           </td><td><font size=3> 955</td></tr>
 <tr><td><font size=3>Marvin Harrison        </td><td><font size=3> 955</td></tr>
