--- a/playoff.html
+++ b/playoff.html
@@ -9,6 +9,12 @@
     <td><b>Semifinal</b></td>
     <td><b>Points Champion</td>
     <td><b>2nd Points</b></td></tr>
+<tr><td>2024</td>
+    <td>Randy(845)-Grant(765)</td>
+    <td>Randy(1125)-Roger(700)</td>
+    <td>Grant(1070)-John(565)</td>
+    <td>Grant (14650)</td>
+    <td>Roger (12775)</td></tr>
 <tr><td>2023</td>
     <td>Sam(900)-John(755)</td>
     <td>Sam(770)-Steven(430)</td>
