--- a/week18.html
+++ b/week18.html
@@ -66,7 +66,7 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Mike (3)</b></font></td></tr>
-<tr><td>Stafford (D)</td>  <td></td><td align=right>***</td></tr>
+<tr><td>Stafford (D)</td>  <td></td><td align=right>100</td></tr>
 <tr><td>CBrown</td>        <td></td><td align=right>0</td></tr>
 <tr><td>KWilliams</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Smith-Njigba</td>  <td></td><td align=right>0</td></tr>
@@ -74,7 +74,7 @@
 <tr><td>McBride</td>       <td></td><td align=right>80</td></tr>
 <tr><td>Aubrey</td>        <td></td><td align=right>130</td></tr>
 <tr><td>Coleman</td>       <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>***</td></tr>
+<tr><td></td>              <td></td><td align=right>310</td></tr>
 </table>
 </td>
 <td>
@@ -116,7 +116,7 @@
 <tr><td>Pickens (D)</td>   <td></td><td align=right>140</td></tr>
 <tr><td>Kelce (D)</td>     <td></td><td align=right>***</td></tr>
 <tr><td>Bates (D)</td>     <td></td><td align=right>***</td></tr>
-<tr><td>Reichard (D)</td>  <td></td><td align=right>***</td></tr>
+<tr><td>Reichard (D)</td>  <td></td><td align=right>30</td></tr>
 <tr><td></td>              <td></td><td align=right>***</td></tr>
 </table>
 </td>
@@ -185,7 +185,7 @@
 <tr><td><font size=2>Mike(3)</font></td>
     <td><font size=2>8</font></td>
     <td><font size=2>8</font></td>
-    <td><font size=2>9455</font></td>
+    <td><font size=2>9765</font></td>
     <td><font size=2>9035</font></td>
     <td><font size=2>790</font></td>
     <td><font size=2>220</font></td>
