--- a/board25.html
+++ b/board25.html
@@ -72,7 +72,7 @@
 <tr><td>6</td>
     <td>Ryan<br>Fitzgerald</td>
     <td>Sam<br>LaPorta</td>
-    <td>Andy<br>Boregales</td>
+    <td>Andy<br>Borregales</td>
     <td>Emeka<br>Egbuka</td>
     <td>James<br>Conner</td>
     <td>Trey<br>McBride</td>
