--- a/roster.html
+++ b/roster.html
@@ -26,7 +26,7 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td> LV</td><td>Ashton Jeanty          </td></tr>
 <tr><td>CAR</td><td>Ryan Fitzgerald        </td></tr>
-<tr><td>JAC</td><td>Bhayshul Tuten         </td></tr>
+<tr><td>JAX</td><td>Bhayshul Tuten         </td></tr>
 <tr><td>CHI</td><td>Luther Burden          </td></tr>
 <tr><td>LAC</td><td>Tre' Harris            </td></tr>
 <tr><td>CHI</td><td>Kyle Monangai          </td></tr>
@@ -44,7 +44,7 @@
 <tr><td>CLE</td><td>Jerome Ford            </td></tr>
 <tr><td>ATL</td><td>Tyler Allgeier         </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>JAC</td><td>Brian Thomas           </td></tr>
+<tr><td>JAX</td><td>Brian Thomas           </td></tr>
 <tr><td>LAC</td><td>Ladd McConkey          </td></tr>
 <tr><td>LAR</td><td>Davante Adams          </td></tr>
 <tr><td> KC</td><td>Rashee Rice            </td></tr>
@@ -80,7 +80,7 @@
 <tr><td>BAL</td><td>Isaiah Likely          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DAL</td><td>Brandon Aubrey         </td></tr>
-<tr><td>JAC</td><td>Cam Little             </td></tr>
+<tr><td>JAX</td><td>Cam Little             </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>PIT</td><td>Kaleb Johnson          </td></tr>
 <tr><td> NE</td><td>Andy Borregales        </td></tr>
@@ -98,7 +98,7 @@
 <tr><td>PHI</td><td>Saquon Barkley         </td></tr>
 <tr><td>LAR</td><td>Kyren Williams         </td></tr>
 <tr><td>PIT</td><td>Jaylen Warren          </td></tr>
-<tr><td>JAC</td><td>Travis Etienne         </td></tr>
+<tr><td>JAX</td><td>Travis Etienne         </td></tr>
 <tr><td>PHI</td><td>Will Shipley           </td></tr>
 <tr><td>LAR</td><td>Blake Corum            </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -128,7 +128,7 @@
 <tr><td>ARI</td><td>James Conner           </td></tr>
 <tr><td>TEN</td><td>Tony Pollard           </td></tr>
 <tr><td>WAS</td><td>Austin Ekeler          </td></tr>
-<tr><td>JAC</td><td>Tank Bigsby            </td></tr>
+<tr><td>JAX</td><td>Tank Bigsby            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DET</td><td>Amon-Ra St Brown       </td></tr>
 <tr><td>CHI</td><td>DJ Moore               </td></tr>
@@ -237,7 +237,7 @@
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Randy (9)</b></font></td></tr>
 <tr><td>LAC</td><td>Justin Herbert         </td></tr>
 <tr><td>HOU</td><td>CJ Stroud              </td></tr>
-<tr><td>JAC</td><td>Trevor Lawrence        </td></tr>
+<tr><td>JAX</td><td>Trevor Lawrence        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>NYJ</td><td>Breece Hall            </td></tr>
 <tr><td> KC</td><td>Isiah Pacheco          </td></tr>
@@ -284,7 +284,7 @@
 <tr><td>CIN</td><td>Evan McPherson         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>LAC</td><td>Omarion Hampton        </td></tr>
-<tr><td>JAC</td><td>Travis Hunter          </td></tr>
+<tr><td>JAX</td><td>Travis Hunter          </td></tr>
 <tr><td>WAS</td><td>Jacory Croskey-Merritt </td></tr>
 <tr><td>CLE</td><td>Quinshon Judkins       </td></tr>
 <tr><td>SEA</td><td>Tory Horton            </td></tr>
