--- a/week1.html
+++ b/week1.html
@@ -129,7 +129,7 @@
 <tr><td>Gibbs</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Conner</td>        <td></td><td align=right>0</td></tr>
 <tr><td>St Brown</td>      <td></td><td align=right>0</td></tr>
-<tr><td>DMoore</td>        <td></td><td align=right>0</td></tr>
+<tr><td>DSmith</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Andrews</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Bass</td>          <td></td><td align=right>0</td></tr>
 <tr><td>McMillan</td>      <td></td><td align=right>0</td></tr>
