--- a/pickups.html
+++ b/pickups.html
@@ -1,94 +1,222 @@
 <table cellpadding=0 cellspacing=0 width=650 border=0>
 <tr>
-<td bgcolor='purple'><font size=4 color=#F2F2ED><b>States</b></font></td>
-<td bgcolor='purple'><font size=4 color=#F2F2ED><b>Roger</b></font></td>
-</tr>
-<tr>
-<td><table><tr>
-<td width=15>1)</td>
-<td width=370>Joe Flacco/Aaron Rodgers</td>
-<td width=50>11/3</td>
-</tr></table></td>
-<td><table><tr>
-<td width=15>1)</td>
-<td width=370>Traded to Randy</td>
-<td width=50>9/10</td>
-</tr></table></td>
-</tr>
-<tr>
-<td><table><tr>
-<td width=15>2)</td>
-<td width=370></td>
-<td width=50></td>
-</tr></table></td>
-<td><table><tr>
-<td width=15>2)</td>
-<td width=370>Tyler Lockett/Ty Chandler</td>
-<td width=50>9/15</td>
-</tr></table></td>
-</tr>
-<tr>
-<td><table><tr>
-<td width=15>3)</td>
-<td width=370></td>
-<td width=50></td>
-</tr></table></td>
-<td><table><tr>
-<td width=15>3)</td>
-<td width=370>Kareem Hunt/Trevor Lawrence</td>
-<td width=50>9/17</td>
-</tr></table></td>
-</tr>
-<tr>
-<td><table><tr>
-<td width=15>4)</td>
-<td width=370></td>
-<td width=50></td>
-</tr></table></td>
-<td><table><tr>
-<td width=15>4)</td>
-<td width=370>Spencer Rattler/Jaylen Warren</td>
-<td width=50>10/13</td>
-</tr></table></td>
-</tr>
-<tr>
-<td><table><tr>
-<td width=15>5)</td>
-<td width=370></td>
-<td width=50></td>
-</tr></table></td>
-<td><table><tr>
-<td width=15>5)</td>
-<td width=370></td>
-<td width=50></td>
-</tr></table></td>
-</tr>
-<tr>
+<td bgcolor='purple'><font size=4 color=#F2F2ED><b>Steven</b></font></td>
 <td bgcolor='purple'><font size=4 color=#F2F2ED><b>Mike</b></font></td>
+</tr>
+<tr>
+<td><table><tr>
+<td width=15>1)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+<td><table><tr>
+<td width=15>1)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+</tr>
+<tr>
+<td><table><tr>
+<td width=15>2)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+<td><table><tr>
+<td width=15>2)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+</tr>
+<tr>
+<td><table><tr>
+<td width=15>3)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+<td><table><tr>
+<td width=15>3)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+</tr>
+<tr>
+<td><table><tr>
+<td width=15>4)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+<td><table><tr>
+<td width=15>4)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+</tr>
+<tr>
+<td><table><tr>
+<td width=15>5)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+<td><table><tr>
+<td width=15>5)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+</tr>
+<tr>
+<td bgcolor='purple'><font size=4 color=#F2F2ED><b>States</b></font></td>
+<td bgcolor='purple'><font size=4 color=#F2F2ED><b>Sam</b></font></td>
+</tr>
+<tr>
+<td><table><tr>
+<td width=15>1)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+<td><table><tr>
+<td width=15>1)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+</tr>
+<tr>
+<td><table><tr>
+<td width=15>2)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+<td><table><tr>
+<td width=15>2)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+</tr>
+<tr>
+<td><table><tr>
+<td width=15>3)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+<td><table><tr>
+<td width=15>3)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+</tr>
+<tr>
+<td><table><tr>
+<td width=15>4)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+<td><table><tr>
+<td width=15>4)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+</tr>
+<tr>
+<td><table><tr>
+<td width=15>5)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+<td><table><tr>
+<td width=15>5)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+</tr>
+<tr>
+<td bgcolor='purple'><font size=4 color=#F2F2ED><b>Rich</b></font></td>
+<td bgcolor='purple'><font size=4 color=#F2F2ED><b>Grant</b></font></td>
+</tr>
+<tr>
+<td><table><tr>
+<td width=15>1)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+<td><table><tr>
+<td width=15>1)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+</tr>
+<tr>
+<td><table><tr>
+<td width=15>2)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+<td><table><tr>
+<td width=15>2)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+</tr>
+<tr>
+<td><table><tr>
+<td width=15>3)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+<td><table><tr>
+<td width=15>3)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+</tr>
+<tr>
+<td><table><tr>
+<td width=15>4)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+<td><table><tr>
+<td width=15>4)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+</tr>
+<tr>
+<td><table><tr>
+<td width=15>5)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+<td><table><tr>
+<td width=15>5)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+</tr>
+<tr>
 <td bgcolor='purple'><font size=4 color=#F2F2ED><b>Matthew</b></font></td>
+<td bgcolor='purple'><font size=4 color=#F2F2ED><b>John</b></font></td>
 </tr>
 <tr>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370>Austin Seibert/Curtis Samuel</td>
-<td width=50>10/20</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370>Tucker Kraft/Luke McCaffrey</td>
-<td width=50>10/8</td>
+<td width=370>Jauan Jennings/Chris Godwin</td>
+<td width=50>9/5</td>
 </tr></table></td>
 </tr>
 <tr>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370>Josh Downs/Khalil Herbert</td>
-<td width=50>11/9</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370>Brandon Allen/Dalton Schultz</td>
-<td width=50>11/24</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 </tr>
 <tr>
@@ -99,8 +227,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370>Kendre Miller/Tank Dell</td>
-<td width=50>12/22</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 </tr>
 <tr>
@@ -111,8 +239,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>4)</td>
-<td width=370>Russell Wilson/Brandon Allen</td>
-<td width=50>1/3</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 </tr>
 <tr>
@@ -129,13 +257,13 @@
 </tr>
 <tr>
 <td bgcolor='purple'><font size=4 color=#F2F2ED><b>Randy</b></font></td>
-<td bgcolor='purple'><font size=4 color=#F2F2ED><b>Rich</b></font></td>
+<td bgcolor='purple'><font size=4 color=#F2F2ED><b>Roger</b></font></td>
 </tr>
 <tr>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370>Ty Chandler/Jordan Addison</td>
-<td width=50>9/18</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
@@ -146,72 +274,8 @@
 <tr>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370>Tank Bigsby/Ezekiel Elliott</td>
-<td width=50>10/8</td>
-</tr></table></td>
-<td><table><tr>
-<td width=15>2)</td>
 <td width=370></td>
 <td width=50></td>
-</tr></table></td>
-</tr>
-<tr>
-<td><table><tr>
-<td width=15>3)</td>
-<td width=370>Matthew Wright/Derek Carr</td>
-<td width=50>10/17</td>
-</tr></table></td>
-<td><table><tr>
-<td width=15>3)</td>
-<td width=370></td>
-<td width=50></td>
-</tr></table></td>
-</tr>
-<tr>
-<td><table><tr>
-<td width=15>4)</td>
-<td width=370>Quentin Johnston/Ty Chandler</td>
-<td width=50>12/8</td>
-</tr></table></td>
-<td><table><tr>
-<td width=15>4)</td>
-<td width=370></td>
-<td width=50></td>
-</tr></table></td>
-</tr>
-<tr>
-<td><table><tr>
-<td width=15>5)</td>
-<td width=370></td>
-<td width=50></td>
-</tr></table></td>
-<td><table><tr>
-<td width=15>5)</td>
-<td width=370></td>
-<td width=50></td>
-</tr></table></td>
-</tr>
-<tr>
-<td bgcolor='purple'><font size=4 color=#F2F2ED><b>Sam</b></font></td>
-<td bgcolor='purple'><font size=4 color=#F2F2ED><b>Steven</b></font></td>
-</tr>
-<tr>
-<td><table><tr>
-<td width=15>1)</td>
-<td width=370>TJ Hockenson/Spencer Rattler</td>
-<td width=50>10/4</td>
-</tr></table></td>
-<td><table><tr>
-<td width=15>1)</td>
-<td width=370>Wil Lutz/Keenan Allen</td>
-<td width=50>11/21</td>
-</tr></table></td>
-</tr>
-<tr>
-<td><table><tr>
-<td width=15>2)</td>
-<td width=370>Jake Bates/Jerome Ford</td>
-<td width=50>11/12</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
@@ -222,8 +286,8 @@
 <tr>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370>Jaylen Warren/Braelon Allen</td>
-<td width=50>12/30</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>3)</td>
@@ -234,72 +298,8 @@
 <tr>
 <td><table><tr>
 <td width=15>4)</td>
-<td width=370>Nikko Remigio/Jauan Jennings</td>
-<td width=50>1/7</td>
-</tr></table></td>
-<td><table><tr>
-<td width=15>4)</td>
 <td width=370></td>
 <td width=50></td>
-</tr></table></td>
-</tr>
-<tr>
-<td><table><tr>
-<td width=15>5)</td>
-<td width=370></td>
-<td width=50></td>
-</tr></table></td>
-<td><table><tr>
-<td width=15>5)</td>
-<td width=370></td>
-<td width=50></td>
-</tr></table></td>
-</tr>
-<tr>
-<td bgcolor='purple'><font size=4 color=#F2F2ED><b>John</b></font></td>
-<td bgcolor='purple'><font size=4 color=#F2F2ED><b>Grant</b></font></td>
-</tr>
-<tr>
-<td><table><tr>
-<td width=15>1)</td>
-<td width=370>Isaiah Likely/Carson Steele</td>
-<td width=50>9/10</td>
-</tr></table></td>
-<td><table><tr>
-<td width=15>1)</td>
-<td width=370>Alexander Mattison/Ben Sinnott</td>
-<td width=50>10/1</td>
-</tr></table></td>
-</tr>
-<tr>
-<td><table><tr>
-<td width=15>2)</td>
-<td width=370>Cade Otton/Jake Ferguson</td>
-<td width=50>10/24</td>
-</tr></table></td>
-<td><table><tr>
-<td width=15>2)</td>
-<td width=370>Jake Ferguson/Pat Freiermuth</td>
-<td width=50>11/3</td>
-</tr></table></td>
-</tr>
-<tr>
-<td><table><tr>
-<td width=15>3)</td>
-<td width=370>Nick Westbrook-Ikhine/Diontae Johnson</td>
-<td width=50>12/3</td>
-</tr></table></td>
-<td><table><tr>
-<td width=15>3)</td>
-<td width=370>Jordan Addison/Michael Pittman</td>
-<td width=50>12/28</td>
-</tr></table></td>
-</tr>
-<tr>
-<td><table><tr>
-<td width=15>4)</td>
-<td width=370>Brenton Strange/Kirk Cousins</td>
-<td width=50>12/20</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>4)</td>
@@ -327,54 +327,6 @@
 <tr><td width=50>9/14</td>
 <td width=600>
 Free Pickups:<br>
-States - Isaac Guerendo/Clyde Edwards-Helaire (9/14)<br>
-Matthew - Carson Steele/Audric Estime (9/17)<br>
-John - Chris Boswell/Graham Gano (9/18)<br>
-Sam - Emanuel Wilson/MarShawn Lloyd (9/24)<br>
-Steven - Jalen McMillan/Ricky Pearsall (9/25)<br>
-Randy - Cameron Dicker/Matthew Wright (10/22)<br>
-Steven - Ricky Pearsall/Luke Musgrave (10/22)<br>
-Sam - Jauan Jennings/Rashid Shaheed (10/22)<br>
-Grant - Darnell Mooney/Brayden Narveson (10/24)<br>
-Grant - Keaton Mitchell/Stefon Diggs (10/30)<br>
-Mike - Mack Hollins/Rashee Rice (11/9)<br>
-Matthew - Audric Estime/Brandon Aiyuk (11/12)<br>
-Randy - Hunter Henry/Christian Kirk (11/17)<br>
-Matthew - Courtland Sutton/Dak Prescott (11/19)<br>
-John - Cedric Tillman/Harrison Butker (11/20)<br>
-Steven - Jonnu Smith/Chris Godwin (11/21)<br>
-States - Cooper Rush/Christian McCaffrey (12/7)<br>
-Roger - Pat Freiermuth/Dallas Goedert (12/7)<br>
-Rich - Dustin Hopkins/Roman Wilson (12/8)<br>
-States - Patrick Taylor/Jordan Mason (12/10)<br>
-Grant - Isaiah Davis/Austin Ekeler (12/11)<br>
-States - Sincere McCormick/Zamir White (12/12)<br>
-Sam - Jerome Ford/Evan McPherson (12/17)<br>
-Roger - Ty Johnson/Austin Seibert (12/29)
-</td></tr>
-<tr><td width=50>9/10</td>
-<td width=600>
-Roger - Dallas Goedert (cut Antonio Gibson)<br>
-Randy - pickup (Derek Carr/- 9/17)
-</td></tr>
-<tr><td width=50>11/7</td>
-<td width=600>
-Roger - Garrett Wilson, Austin Seibert<br>
-Mike - Chase Brown, Zach Charbonnet
-</td></tr>
-<tr><td width=50>11/13</td>
-<td width=600>
-Mike - Blake Corum<br>
-Steven - Zach Charbonnet
-</td></tr>
-<tr><td width=50>11/24</td>
-<td width=600>
-Roger - Dalton Kincaid<br>
-Grant - Mark Andrews
-</td></tr>
-<tr><td width=50>12/5</td>
-<td width=600>
-Roger - Alexander Mattison<br>
-Grant - Jason Sanders
+none
 </td></tr>
 </table>
