--- a/roster.html
+++ b/roster.html
@@ -220,7 +220,7 @@
 <tr><td>PHI</td><td>AJ Brown               </td></tr>
 <tr><td>NYJ</td><td>Garrett Wilson         </td></tr>
 <tr><td>DAL</td><td>George Pickens         </td></tr>
-<tr><td> TB</td><td>Chris Godwin           </td></tr>
+<tr><td> SF</td><td>Jauan Jennings         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CLE</td><td>David Njoku            </td></tr>
 <tr><td height=9></td><td></td></tr>
