--- a/week1.html
+++ b/week1.html
@@ -73,7 +73,7 @@
 <tr><td>Harrison</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Engram</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Aubrey</td>        <td></td><td align=right>0</td></tr>
-<tr><td>KJohnson</td>      <td></td><td align=right>0</td></tr>
+<tr><td>Borregales</td>    <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
